# Matrix_based_ORAM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Zmq_socket.cpp  Zmq_socket.hpp  a.out  main.cpp
src/: Block.cpp  Block.hpp  ClientMatrixORAM.cpp  ClientMatrixORAM.hpp  Config.hpp  MatrixORAM.cpp  MatrixORAM.hpp  ServerMatrixORAM.cpp  ServerMatrixORAM.hpp  Zmq_socket.cpp  Zmq_socket.hpp
